Remove useless changes